working LED score

--- a/lab5.uvprojx
+++ b/lab5.uvprojx
@@ -435,6 +435,16 @@
               <FileType>5</FileType>
               <FilePath>.\game_logic.h</FilePath>
             </File>
+            <File>
+              <FileName>peripherals.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\peripherals.c</FilePath>
+            </File>
+            <File>
+              <FileName>peripherals.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\peripherals.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
